--- a/Lab3.html
+++ b/Lab3.html
@@ -1,6 +1,16 @@
 <html>
     <head>
-        <title></title>
+        <title>Rock Paper Scissors</title>
         <link rel="stylesheet" href="Lab3.css">
     </head>
+
+    <body>
+        <!-- Header Section -->
+        <header id="head-bar">
+            <h1>Lab 3 - Rock Paper Scissors</h1>
+        </header>
+
+
+
+    </body>
 </html>
