--- a/Lab3.html
+++ b/Lab3.html
@@ -9,6 +9,15 @@
         <header id="head-bar">
             <h1>Lab 3 - Rock Paper Scissors</h1>
         </header>
+        <!-- Navigation Section -->
+        <nav id="main-nav">
+            <ul>
+                <li>Yahoo Finance</li>
+                <li>Gemini</li>
+                <li>Testudo</li>
+            </ul>
+
+        </nav>
 
 
 
