--- a/Lab3.html
+++ b/Lab3.html
@@ -18,6 +18,34 @@
             </ul>
 
         </nav>
+        <!-- Main text Area -->
+        <div class="main-container">
+            <div class="content-area">
+                <div class="content-box">
+                    <h1>Please choose one of the following.</h1>
+                    <form>
+                        <label for="Name">Name: </label>
+                        <input type="text" id="name" required>
+                        <br>
+                        <label for="Choice">Your choice: </label>
+                        <input type="text" id="choice" required>
+
+                        <br>
+                        <input type="submit">
+                    </form>
+                </div>
+    <aside id="contact">
+            <h1>Contact Info</h1>
+            <hr>
+            <h3>Name: Arvin Singh</h3>
+             <h3>Email: Arvinsingh911@gmail.com</h3>
+    
+    </aside>
+                
+
+
+
+            </div>
 
 
 
